[package]
name = "grrs"
version = "0.1.0"
description = "A simple grep tool written in Rust"
keywords = ["grep", "cli-tools", "search"]
categories = ["command-line-utilities"]
repository = "https://github.com/hlisdero/grrs"
homepage = "https://github.com/hlisdero/grrs"
authors = ["Horacio Lisdero Scaffino <hlisdero@users.noreply.github.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
