[package]
name = "grrs"
version = "0.1.0"
description = "A simple grep tool written in Rust"
keywords = ["grep", "cli-tools", "search"]
categories = ["command-line-utilities"]
repository = "https://github.com/hlisdero/grrs"
homepage = "https://github.com/hlisdero/grrs"
authors = ["Horacio Lisdero Scaffino <hlisdero@users.noreply.github.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.22"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.0.4"
